# GP_Dino

./: CMakeLists.txt  README.md
game/: CMakeLists.txt
game/src/: game.c  game.h  main.c
